--- a/COMP.SE.200-2020-assignment-master/COMP.SE.200-2020-assignment-master/src/test/.travis.yml
+++ b/COMP.SE.200-2020-assignment-master/COMP.SE.200-2020-assignment-master/src/test/.travis.yml
@@ -1,5 +1,11 @@
 language: node_js
-node_js: 
-    - "8"
-    - "7"
-    - "6"
+node_js: "stable"
+
+dist: bionic
+
+before_install:
+   - stty cols 80
+
+addons:
+   firefox: latest
+   chrome: stable
