--- a/COMP.SE.200-2020-assignment-master/COMP.SE.200-2020-assignment-master/src/test/.travis.yml
+++ b/COMP.SE.200-2020-assignment-master/COMP.SE.200-2020-assignment-master/src/test/.travis.yml
@@ -11,10 +11,10 @@ script:
     - npm test
     - npm run build
 
-    
+
 deploy: 
     provider: pages
     skip-cleanup: true
     github-token: $GITHUB_TOKEN
     on:
-        branch: main
+        branch: master
